--- a/support/dashboard.html
+++ b/support/dashboard.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support Dashboard</title>
     <script src="https://unpkg.com/appwrite"></script>
-    <script src="dashboard.js" defer></script>
     <style>
         body { font-family: Arial, sans-serif; }
         table { width: 100%; border-collapse: collapse; }
@@ -28,5 +27,37 @@
         </thead>
         <tbody></tbody>
     </table>
+
+    <script>
+        const client = new window.Appwrite();
+        client
+            .setEndpoint('YOUR_APPWRITE_ENDPOINT')
+            .setProject('YOUR_APPWRITE_PROJECT_ID')
+            .setKey('YOUR_APPWRITE_API_KEY')
+            .setSelfSigned();
+
+        const database = new window.Appwrite.Database(client);
+
+        async function fetchTickets() {
+            try {
+                const response = await database.listDocuments('tickets');
+                const tickets = response.documents;
+                const tbody = document.getElementById('ticketsTable').getElementsByTagName('tbody')[0];
+
+                tickets.forEach(ticket => {
+                    const row = tbody.insertRow();
+                    row.insertCell(0).innerText = ticket.$id;
+                    row.insertCell(1).innerText = ticket.userId;
+                    row.insertCell(2).innerText = ticket.content;
+                    row.insertCell(3).innerText = ticket.status;
+                    row.insertCell(4).innerText = new Date(ticket.createdAt).toLocaleString();
+                });
+            } catch (error) {
+                console.error('Failed to fetch tickets:', error);
+            }
+        }
+
+        fetchTickets();
+    </script>
 </body>
 </html>
